--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# Ignore emacs/prerequisite directories
 emacs/prerequisite/Pymacs-0.23/
 emacs/prerequisite/rope-0.9.2/
 emacs/prerequisite/ropemacs-0.6c2/
 
+# ignore emacs backup and cache directories
 emacs/backup
 emacs/cache
+
+# Ignore *all* .pyc files
+*.pyc
