--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-# Ignore emacs/prerequisite directories
-#emacs/prerequisite/Pymacs-0.23/
-#emacs/prerequisite/rope-0.9.2/
-#emacs/prerequisite/ropemacs-0.6c2/
-
-# ignore emacs backup and cache directories
-emacs/backup
-emacs/cache
-
 # Ignore *all* .pyc files
 **/**/*.pyc
-vim/.netrwhist
+
+# ignore emacs directories
+emacs/backup
+emacs/cache
 emacs/auto-save-list/
+
+# vim
+vim/.netrwhist
+
+# fish
+fish/fish_history
+fish/fishd.*
