Updated locations of .emacs.d/{backup,cache} directories (and updated .gitignore).  Added command-frequency.el

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,8 @@
 \#*.*\#
 
 # emacs
-emacs/backup/
-emacs/cache/
-emacs/auto-save-list/
-emacs/tramp
+emacs/.backup/
+emacs/.cache/
 
 # vim
 vim/.netrwhist
