Added use of tabooext

--- a/dotfiles/logrotate.conf
+++ b/dotfiles/logrotate.conf
@@ -1,6 +1,8 @@
-"$HOME/.procmail/log/procmail" {
+tabooext + ~
+
+"~/.procmail/log/procmail" {
     rotate 30
-    daily
+    weekly
     compress
     dateext
     missingok
