--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,16 @@ vim/doc/*
 # fish
 fish/fish_history
 fish/fishd.*
+
+# symlinks created through install.py script
+bin/ew
+bin/e
+bin/eg
+bin/errorlog.sh
+bin/accesslog.sh
+
+# submodules
+bin/.eg.git
+
+# rope-projects
+bin/.ropeproject
