Added procmail/home and updated xask URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://gitorious.org/eg/mainline.git
 [submodule "bin/.xask.git"]
 	path = bin/.xask.git
-	url = ssh://zathras.sr.unh.edu//dvcs/git/xask
+	url = ssh://skk@zathras.sr.unh.edu//dvcs/git/xask
