--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ bin/xask.py
 bin/.ropeproject
 
 # procmail
-procmail/work/log/procmail*
-procmail/home/log/procmail*
+procmail/work/log/procmail.*
+procmail/home/log/procmail.*
