Added cutpass and xask files

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ bin/xask.py
 bin/.cutpass.bzr
 bin/cutpass.py
 bin/qCutpass.py
+bin/cutpass
+bin/qCutpass
+bin/xask
 
 # rope-projects
 bin/.ropeproject
