Added ignores for default home and work procmail log files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ bin/.ropeproject
 # procmail
 procmail/work/log/procmail.*
 procmail/home/log/procmail.*
+procmail/work/log/procmail
+procmail/home/log/procmail
