--- a/dotfiles/logrotate.conf
+++ b/dotfiles/logrotate.conf
@@ -1,8 +1,9 @@
 "$HOME/.procmail/log/procmail" {
     rotate 30
-    weekly
+    daily
+    delaycompress    
     compress
     dateext
     missingok
-    create 0600 skk users 
+    create 0600 skk skk
 }
