Changed procmail lines in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,5 @@ bin/xask
 bin/.ropeproject
 
 # procmail
-procmail/work/log/procmail.*
-procmail/home/log/procmail.*
-procmail/work/log/procmail
-procmail/home/log/procmail
+procmail/work/log/*
+procmail/home/log/*
