Updated to procmail rules

--- a/procmail/work/projects.rc
+++ b/procmail/work/projects.rc
@@ -36,6 +36,9 @@
 #
 :0
 * ^From:.*Michele.Jacobi@noaa.gov.*
+* ^From:.*TracyR@genwest.com.*
+* ^From:.*Marla.Steinhoff@noaa.gov.*
+* ^From:.*Benjamin.Shorr@noaa.gov.*
 .Projects.ERMA/
 
 # Events
