--- a/procmail/work/projects.rc
+++ b/procmail/work/projects.rc
@@ -29,7 +29,7 @@
 
 :0
 * ^From:.*ian.j.zelo@noaa.gov.*
-* ^From:*Jerry.Muhasky@noaa.gov.*
+* ^From:.*Jerry.Muhasky@noaa.gov.*
 * ^From:.*Brianne.Connolly@noaa.gov.*
 .Projects.eSCAT/
 
