--- a/procmail/work/rcc.rc
+++ b/procmail/work/rcc.rc
@@ -29,32 +29,10 @@
 * ^(To:Cc):.*web-admin@sr.unh.edu.*
 .WebAdmin/
 
-# Old rules; kept until I know the new Ops/Staff rules work.
-#
-# Staff email
-#:0
-#* ^To: .*(rcc-staff-ops|staff|rcc-staff)@sr.unh.edu.*
-#.Staff/
-#
-#:0
-#* ^CC: .*(rcc-staff-ops|staff|rcc-staff)@sr.unh.edu.*
-#.Staff/
-#
-## Ops email
-#:0
-#* ^To: .*(rcc-ops|ops)@(eos|bluemoon).unh.edu.*
-#.Ops/
-#
-#:0
-#* ^To: .*(rcc-ops|ops)@(eos|blackstar).unh.edu.*
-#.Ops/
-#
-#:0
-#* ^CC: .*(ops|rcc-ops|rcc)@sr.unh.edu.*
-#.Ops/
-#
-#:0
-#* ^To: .*(rcc-ops|ops|rccops|rcc)@(.*)sr.unh.edu.*
-#.Ops/
-#
-# /* vim: set filetype=procmail : */ 
+# catch messages from Al's personal email address
+:0
+* ^From:.*allan.wright@comcast.net.*
+{
+    :0
+    .MaildirInbox/	# to Ops/
+}
