--- a/procmail/work/spam.rc
+++ b/procmail/work/spam.rc
@@ -8,18 +8,7 @@
 /dev/null
 
 :0
-* ^Subject:.*SEXUALLY-EXPLICIT:.*
-* ^X-Spam-Flag:^YES$
-* ^X-Spam-Level:\ ****.*
-.Spam/
-
-:0
-* ^(To|CC):.*(res05564|[Uu]ndisclosed-[Rr]ecipients|undisclosed-recipients|spambot)
-* ^From:.*(galamail\.com|agentoflove|absoluteagency\.com|delphi\.com|238525)
-* ^Subject:.*(offer|free|pay|[Vv][Ii1][Aa][Gg][Rr][Aa]|wanted|penis|offer|chip|inch|please|pill|[Hh]ydrocodone|remember|f(w:|wd|orward))
-* ^X-Advertisement:.*
-* ^X-Mailer:.*(Advanced Mass)
-* ^Message-ID.*<>
-.Possible\ Junk\ Mail/
+* ^X-Spam-Level:\ ******.*
+/dev/null
 
 # /* vim: set filetype=procmail : */ 
