--- a/procmail/work/root.rc
+++ b/procmail/work/root.rc
@@ -1,7 +1,5 @@
 # $Id: root.rc 2492 2008-06-30 16:41:08Z skk $
 
-# root messages
-
 # just delete DHCP warnings
 :0
 * ^Subject: DHCP Warning
@@ -42,5 +40,26 @@
 * ^From:.*MAILER-DAEMON@stella.sr.unh.edu.*
 /dev/null
 
+:0
+* ^From:.*root@.*
+.Systems.Root/
 
-# /* vim: set filetype=procmail : */ 
+:0
+* ^Subject:.*Cron.*
+.Systems.CronDaemon/
+
+:0
+* ^From:.*[lL]ogwatch.*
+.Systems.LogWatch/
+
+:0
+* ^Subject:.*[lL]ogwatch.*
+.Systems.LogWatch/
+
+:0
+* ^Subject:.*DenyHosts Report*.*
+.Systems.DenyHosts/
+
+:0
+* ^Subject:.*UNH Admissions received your e-mail.*
+/dev/null
