--- a/procmail/work/rcc.rc
+++ b/procmail/work/rcc.rc
@@ -8,7 +8,8 @@
 
  
 # RCI Staff email
-:0 ^(To|Cc):.*rci-staff@icarus.sr.unh.edu.*
+:0 
+* ^(To|Cc):.*rci-staff@icarus.sr.unh.edu.*
 .Staff/
 
 # Ops email
