Fixed PAT rules

--- a/procmail/work/rcc.rc
+++ b/procmail/work/rcc.rc
@@ -37,15 +37,16 @@
 
 # PAT Related emails
 :0
-* ^(To:CC).*PATDistrict8@maple.unh.edu.*
+* ^(To:CC):.*PATDistrict8@maple.unh.edu.*
 .Staff/
 
 :0
-* ^(To:CC).*PATDistrict8@maple.unh.edu.*
+* ^(To:CC):.*PATDistrict8@maple.unh.edu.*
 .Staff/
 
-* ^(To:CC).*pat.council@lists.unh.edu.*
+* ^(To:CC):.*pat.council@lists.unh.edu.*
 .Staff/
+
 
 # catch messages from Al's personal email address
 :0
