Updated rules for new BOD

--- a/procmail/home/hemlockforest.rc
+++ b/procmail/home/hemlockforest.rc
@@ -1,5 +1,6 @@
+
 :0
-* ^From:.*Ddonelan@evergreenmgt.com.*
+* ^From:.*Judi.Angelo@executiveproperties.com.*
 .HemlockForest/
 
 :0
@@ -7,33 +8,8 @@
 .HemlockForest/
 
 :0
-* ^From:.*cmccarthy@evergreenmgt.com.*
-.HemlockForest/
-
-:0
-* ^From:.*EHarte10@aol.com.*
-.HemlockForest/
-
-:0
-* ^From:.*shaf12345@aol.com.*
-.HemlockForest/
-
-:0
-* ^From:.*sforbes61@yahoo.com.*
-.HemlockForest/
-
-:0
-* ^From:.*totracym@yahoo.com.*
-.HemlockForest/
-
-:0
-* ^From:.*jcharrette@evergreenmgt.com.*
-.HemlockForest/
-
-:0
-* ^From:.*mbrent@evergreenmgt.com.*
-.HemlockForest/
-
-:0
-* ^From:.*Judi.Angelo@executiveproperties.com.*
+* ^ From:.*jason@4wallsnh.com.*
+* ^ From:.*thejourneycontinues@comcast.net.*
+* ^ From:.*nseddy1@yahoo.com.*
+* ^ From:.*benjamin.bascom@gmail.com.*
 .HemlockForest/
