--- a/procmail/home/hemlockforest.rc
+++ b/procmail/home/hemlockforest.rc
@@ -8,8 +8,17 @@
 .HemlockForest/
 
 :0
-* ^ From:.*jason@4wallsnh.com.*
-* ^ From:.*thejourneycontinues@comcast.net.*
-* ^ From:.*nseddy1@yahoo.com.*
-* ^ From:.*benjamin.bascom@gmail.com.*
+* ^From:.*jason@4wallsnh.com.*
+.HemlockForest/
+
+:0
+* ^From:.*thejourneycontinues@comcast.net.*
+.HemlockForest/
+
+:0
+* ^From:.*nseddy1@yahoo.com.*
+.HemlockForest/
+
+:0
+* ^From:.*benjamin.bascom@gmail.com.*
 .HemlockForest/
