Added submodule git_prompt

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "use-package"]
 	path = use-package
 	url = https://github.com/jwiegley/use-package.git
+[submodule "git-prompt"]
+	path = git-prompt
+	url = https://github.com/lvv/git-prompt.git
