--- a/terminator/config
+++ b/terminator/config
@@ -4,11 +4,12 @@
 [keybindings]
 [profiles]
   [[default]]
-    # solarized-light
     palette = "#073642:#d30102:#859900:#b58900:#6c71c4:#d33682:#2aa198:#839496:#586e75:#cb4b16:#859900:#b58900:#268bd2:#d33682:#2aa198:#93a1a1"
-    background_color = "#eee8d5"
+    login_shell = True
+    scrollback_lines = 10000
     cursor_color = "#002b36"
     foreground_color = "#002b36"
+    background_color = "#eee8d5"
 [layouts]
   [[default]]
     [[[child1]]]
