--- a/procmail/work/root.rc
+++ b/procmail/work/root.rc
@@ -1,20 +1,29 @@
 # $Id: root.rc 2492 2008-06-30 16:41:08Z skk $
 
+# denyhost for zathras, kosh
 :0
-* ^From:.*root@.*
-.Systems.Root/
+* ^Subject:.*DenyHosts Report from zathras.*
+* ^Subject:.*DenyHosts Report from kosh.*
+.Root/
 
+# logwatch for zathras, kosh
 :0
-* ^Subject:.*Cron.*
-.Systems.CronDaemon/
+* ^Subject:.*Logwatch for kosh.*
+* ^Subject:.*Logwatch for zathras.*
+.Root/
 
+# save root emails from zathras, kosh, events, lithium
 :0
-* ^Subject:.*DenyHosts Report from (zathras|kosh)*.*
-.Systems.DenyHosts/
+* ^From:.*root@zathras.*
+* ^From:.*root@kosh.*
+* ^From:.*root@www\.events\.unh\.edu\.*
+* ^From:.*root@lithium.*
+.Root/
 
+# save alumni_email_log messages
 :0
-* ^Subject:.*Logwatch for (zathras|kosh)*.*
-.Systems.LogWatch/
+* ^Subject:.*alumni_email_log.*
+.Root/
 
 # Delete Host UP/Down alerts
 :0
@@ -22,33 +31,34 @@
 * ^Subject:.*Host DOWN alert for.*
 .Systems.RootDeletable/
 
+# isxcentral emails
+:0
+* ^From:.*isxcentral@sr.unh.edu.*
+/dev/null
+
+# delete all messages from other root emails
+:0
+* ^From:.*root\@.*
+/dev/null
+
+# UNH Admissions
 :0
 * ^Subject:.*UNH Admissions received your e-mail.*
 /dev/null
 
-:0
-* ^From:.*isxcentral@sr.unh.edu.*
-.Systems.Root/
-
 # just delete DHCP warnings
 :0
-* ^Subject: DHCP Warning
+* ^Subject:.*DHCP Warning.*
 /dev/null
 
-# delete observerplots message
-:0
-* ^Subject:.*observerplots_30min.*
-/dev/null
-
-# delete all postmaster email
-:0
-* ^To:.*(postmaster)@.*
+# delete all postmaster email :0
+* ^To:.*(postmaster).*
 /dev/null
 
 # delete all mailer-daemon email
 :0
-* ^From: .*MAILER-DAEMON.*
-.Systems.MailerDaemon/
+* ^From:.*MAILER-DAEMON.*
+/dev/null
 
 # delete logwatch for other systems.
 :0
@@ -57,22 +67,12 @@
 
 # delete denyhosts for other systems.
 :0
-* ^Subject:.*DenyHosts Report from.*
-/dev/null
-
-# delete clamav messages from alumni
-:0
-* ^Subject:*Cron <root@alumni> /usr/share/clamav/freshclam-sleep.*
-/dev/null
-
-# delete cron from arpeggi
-:0
-* ^Subject:.*Cron <root@arpeggi> run-parts.*
+* ^Subject:.*DenyHosts Report.*
 /dev/null
 
 # delete webcal error messages
 :0
-* ^Subject:.*/web/facilities-dc/htdocs/webcams/.*
+* ^Subject:.*web/facilities-dc/htdocs/webcams.*
 /dev/null
 
 # Delete MAILER-DAEMON@stella
