--- a/procmail/work/root.rc
+++ b/procmail/work/root.rc
@@ -1,5 +1,3 @@
-# $Id: root.rc 2492 2008-06-30 16:41:08Z skk $
-
 # denyhost for zathras, kosh
 :0
 * ^Subject:.*DenyHosts Report from zathras.*
@@ -80,4 +78,7 @@
 * ^From:.*MAILER-DAEMON@stella.sr.unh.edu.*
 /dev/null
 
-nn
+# Delete nagios
+:0
+* ^From:.*nagios@arpeggi.sr.unh.edu.*
+/dev/null
