--- a/terminator/config
+++ b/terminator/config
@@ -6,10 +6,13 @@
   [[default]]
     palette = "#073642:#d30102:#859900:#b58900:#6c71c4:#d33682:#2aa198:#839496:#586e75:#cb4b16:#859900:#b58900:#268bd2:#d33682:#2aa198:#93a1a1"
     login_shell = True
+    background_color = "#eee8d5"
     scrollback_lines = 10000
+    use_system_font = False
     cursor_color = "#002b36"
     foreground_color = "#002b36"
-    background_color = "#eee8d5"
+    font = Inconsolata Medium 11
+    word_chars = "-A-Za-z0-9,./?%&#:_@"
 [layouts]
   [[default]]
     [[[child1]]]
