--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ font xft:Anonymous Pro
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec terminator
 
 # kill focused window
 bindsym $mod+Shift+q kill
