--- a/i3/config
+++ b/i3/config
@@ -13,6 +13,13 @@
 # Mod4 --> Win Key
 set $mod Mod4
 
+# start synergys on startup
+exec /usr/local/bin/synergys
+exec /home/skk/local/bin/emacs --daemon
+
+# The nvidia driver only provides support for Xinerama instead of RandR.
+force_xinerama yes
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -26,7 +33,8 @@ font xft:Anonymous Pro
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec lilyterm
+bindsym $mod+Return exec terminator
+#lilyterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -115,6 +123,12 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -144,9 +158,12 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status --config ~/.i3/i3status.conf
         tray_output primary
 }
+
+#for_window [class="Google-chrome"] floating enable
+
 
 
 # pulse audio volume control
