--- a/i3/config
+++ b/i3/config
@@ -6,9 +6,9 @@
 # Mod4 --> Win Key
 set $mod Mod4
 
-# start synergys on startup
+# programs to run at startup
 exec synergys
-exec emacs --daemon
+exec xautolock -time 3 -locker -secure
 
 # The nvidia driver only provides support for Xinerama instead of RandR.
 force_xinerama yes
@@ -116,6 +116,13 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# lock screen using i3lock
+bindsym $mod+Shift+Control+l exec i3lock
+
+# cutpass
+bindsym $mod+c exec ~/bin/qCutpass
+
+
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
@@ -151,8 +158,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status --config ~/.i3/i3status.conf
-        tray_output primary
+        #status_command i3status --config ~/.i3/i3status.conf
+        tray_output output
+        status_command xmobar  ~/.i3/xmobar.conf
 }
 
 ipc-socket ~/.i3/i3-ipc.sock
