--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -3,7 +3,7 @@ Config { font = "xft:Sans-9:bold"
        , fgColor = "grey"
        , position = BottomW R 90
        , lowerOnStart = False
-       , commands = [ Run Weather "KPSM" ["-t","<station>: <tempF>F","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
+       , commands = [ Run Weather "KPSM" ["-t","<station>: <tempF>°F","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
                     , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Network "eth1" ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
