--- a/dotfiles/git-prompt.conf
+++ b/dotfiles/git-prompt.conf
@@ -48,7 +48,7 @@ short_hostname=on
 #  Do not do VCS parsing for listed directories
 #  useful for directories for which it is difficult to maintain .gitignore so
 #  they are always dirty  (ex: home, /etc) or directory with huge repo (ex: linux src)
-## vcs_ignore_dir_list=" /etc $HOME /usr/src/linux.git "
+vcs_ignore_dir_list="/sshfs"
 
 ###########################################################   COLOR 
 
