--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -11,9 +11,9 @@ Config { font = "xft:Sans-9:bold"
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
                     , Run Com "uname" ["-s","-r"] "" 36000
-    		    , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
+    		    , Run Date "%a %b %_d %Y %H:%M" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% } {%date% | %KPSM% | %uname%"
+       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% } {%date% | %KPSM%"
        }
