Added volumne, dynnetwork and mail

--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -5,15 +5,18 @@ Config { font = "xft:Sans-9:bold"
        , lowerOnStart = False
        , commands = [ Run Weather "KPSM" ["-t","<skyCondition> <tempF>°F","-L","18","-H","25",
                                           "--normal","green","--high","red","--low","lightblue"] 3600
-                    , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
-                    , Run Network "eth1" ["-L","0","-H","32","--normal","green","--high","red"] 10
-                    , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
-                    , Run Memory ["-t","Mem: <usedratio>%"] 10
+                    , Run DynNetwork ["-L","0","-H","32","--normal","green","--high","red"] 10
+                    , Run Cpu            ["-L","3","-H","50","--normal","green","--high","red"] 10
+                    , Run Memory         ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
                     , Run Com "uname" ["-s","-r"] "" 36000
-    		    , Run Date "%a %b %_d %Y %H:%M" "date" 10
+                    , Run Date "%a %b %_d %Y %H:%M" "date" 10
+                    , Run Mail [("Inbox", "~/Maildir/INBOX"),
+                                ("Ops", "~/Maildir/Ops"),
+                                ("Home Inbox", "~/Maildir/Home/INBOX") ] "mail"
+                    , Run Volume "default" "Master" [] 1
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% } {%date% | %KPSM%"
+       , template = "%cpu% | %memory% * %swap% | %dynnetwork% | %default:Master%}  %mail% {%date% | %KPSM%"
        }
