--- a/i3/config
+++ b/i3/config
@@ -7,9 +7,8 @@
 set $mod Mod4
 
 # programs to run at startup
-exec --no-startup-id synergys
 exec --no-startup-id xautolock -time 3 -locker -secure
-exec --no-startup-id dbus-launch
+exec --no-startup-id /home/skk/.i3/startup.sh
 
 # The nvidia driver only provides support for Xinerama instead of RandR.
 force_xinerama yes
@@ -34,7 +33,8 @@ bindsym $mod+Return exec terminator
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec /home/skk/.cabal/bin/yeganesh
 
 # change focus
 bindsym $mod+j focus left
