--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "dash.el"]
 	path = dash.el
 	url = git://github.com/magnars/dash.el.git
+[submodule "html2text"]
+	path = html2text
+	url = https://github.com/aaronsw/html2text.git
