--- a/i3/config
+++ b/i3/config
@@ -33,8 +33,8 @@ bindsym $mod+Return exec terminator
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec /home/skk/.cabal/bin/yeganesh
+bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec /home/skk/.cabal/bin/yeganesh
 
 # change focus
 bindsym $mod+j focus left
