--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "html2text"]
 	path = html2text
 	url = https://github.com/aaronsw/html2text.git
+[submodule "bash-git-prompt"]
+	path = bash-git-prompt
+	url = git@github.com:skk/bash-git-prompt.git
