Removed mail, volume

--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -11,12 +11,8 @@ Config { font = "xft:Sans-9:bold"
                     , Run Swap [] 10
                     , Run Com "uname" ["-s","-r"] "" 36000
                     , Run Date "%a %b %_d %Y %H:%M" "date" 10
-                    , Run Mail [("Inbox", "~/Maildir/INBOX"),
-                                ("Ops", "~/Maildir/Ops"),
-                                ("Home Inbox", "~/Maildir/Home/INBOX") ] "mail"
-                    , Run Volume "default" "Master" [] 1
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %dynnetwork% | %default:Master%}  %mail% {%date% | %KPSM%"
+       , template = "%cpu% | %memory% * %swap% | %dynnetwork%} {%date% | %KPSM%"
        }
