--- a/i3/config
+++ b/i3/config
@@ -26,8 +26,8 @@ font xft:Anonymous Pro
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec terminator
-#lilyterm
+bindsym $mod+Return exec lilyterm
+#terminator
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -122,7 +122,7 @@ bindsym $mod+Shift+Control+l exec i3lock
 
 # cutpass
 bindsym $mod+c exec ~/bin/qCutpass
-bindsym $mod+t exec ~/.i3/dmenu_ssh.sh
+bindsym $mod+t exec ~/dmenu_ssh/bin/dmenu_ssh.pl
 
 
 # Make the currently focused window a scratchpad
@@ -171,10 +171,8 @@ ipc-socket ~/.i3/i3-ipc.sock
 bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 0 -- '-5%'
 bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 0 -- '+5%'
 bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 0 0
-bindsym XF86Launch1 exec /usr/bin/pactl play-sample that_was_easy
-bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
-bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 5
-
-
+#bindsym XF86Launch1 exec /usr/bin/pactl play-sample that_was_easy
+#bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
+#bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 5
 
 
