--- a/i3/config
+++ b/i3/config
@@ -27,6 +27,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec lilyterm
+bindsym $mod+Shift+Return exec ~/.i3/dmenufm.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
