--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # repo wide
 *.pyc
 \#*.*\#
@@ -6,11 +5,10 @@
 # emacs
 emacs/.backup/
 emacs/.cache/
-emacs/el-get
-emacs/el-get/*
 emacs/elpa
 emacs/url
 emacs/auto-save-list
+emacs/.graphene-geometry
 
 # vim
 vim/.netrwhist
@@ -49,8 +47,3 @@ bash/gitstatus.py
 
 # i3
 i3/i3log
-=======
-# ignore caches
-__pycache__
-*.pyc
->>>>>>> 7559e4d8baa27e67bf250e0cf9bb5c9fb3f76c24
