--- a/lilyterm/default.conf
+++ b/lilyterm/default.conf
@@ -10,10 +10,10 @@ version = 0.9.9
 font_name = DejaVu Sans Mono 10
 
 # The default column of vte terminal.
-column = 77
+column = 237
 
 # The default row of vte terminal.
-row = 76
+row = 75
 
 # Use true opacity in vte box.
 # 0: do NOT use rgba, 1: force to use rgba.
@@ -153,7 +153,7 @@ embedded_copy_paste_menu = 1
 
 # Sets whether or not the terminal will beep
 # when the child outputs the "bl" sequence.
-audible_bell = 1
+audible_bell = 0
 
 # Sets whether or not the terminal will flash
 # when the child outputs the "bl" sequence.
@@ -176,7 +176,7 @@ erase_binding = 2
 # 0: VTE_CURSOR_SHAPE_BLOCK
 # 1: VTE_CURSOR_SHAPE_IBEAM
 # 2: VTE_CURSOR_SHAPE_UNDERLINE
-cursor_shape = 1
+cursor_shape = 0
 
 # The default locale used when initing a vte terminal.
 # You may use "zh_TW", "zh_TW.Big5", or "zh_TW.UTF-8" here.
@@ -314,7 +314,7 @@ edit_label_key =
 
 # Find the strings matching the search regex.
 # Left it blank to disable this function key.
-find_key = Ctrl F
+find_key = 
 
 # Find the previous string matching the search regex.
 # Left it blank to disable this function key.
@@ -476,7 +476,7 @@ brightness = 0.200
 
 # The brightness for ansi colors used in terminal when inactive.
 # Left it blank to disable this feature.
-inactive_brightness = 
+inactive_brightness = 0.200
 
 # The ANSI color code for Normal Black
 # You may use black, #000000 or #000000000000 here.
@@ -567,21 +567,21 @@ Color15 =
 # Left it blank to use the locale environs from current page.
 
 # The web browser using for http(s)://
-web_browser = firefox
+web_browser = chromium
 web_method = 1
 web_VTE_CJK_WIDTH = 0
 web_environ = 
 web_locale = 
 
 # The ftp client using for ftp(s)://
-ftp_client = firefox
+ftp_client = chromium
 ftp_method = 1
 ftp_VTE_CJK_WIDTH = 0
 ftp_environ = 
 ftp_locale = 
 
 # The file manager using for file:// and [Open current directory with file manager]
-file_manager = firefox
+file_manager = thunar
 file_method = 1
 file_VTE_CJK_WIDTH = 0
 file_environ = 
