--- a/procmail/work/root.rc
+++ b/procmail/work/root.rc
@@ -32,53 +32,54 @@
 # isxcentral emails
 :0
 * ^From:.*isxcentral@sr.unh.edu.*
-/dev/null
+.Root/
 
 # delete all messages from other root emails
 :0
 * ^From:.*root\@.*
-/dev/null
+.Root/
 
 # UNH Admissions
 :0
 * ^Subject:.*UNH Admissions received your e-mail.*
-/dev/null
+.Root/
 
 # just delete DHCP warnings
 :0
 * ^Subject:.*DHCP Warning.*
-/dev/null
+.Root/
 
 # delete all postmaster email :0
-* ^To:.*(postmaster).*
-/dev/null
+:0
+* ^To:.*\(postmaster\).*
+.Root/
 
 # delete all mailer-daemon email
 :0
 * ^From:.*MAILER-DAEMON.*
-/dev/null
+.Root/
 
 # delete logwatch for other systems.
 :0
 * ^Subject:.*LogWatch for.*
-/dev/null
+.Root/
 
 # delete denyhosts for other systems.
 :0
 * ^Subject:.*DenyHosts Report.*
-/dev/null
+.Root/
 
 # delete webcal error messages
 :0
 * ^Subject:.*web/facilities-dc/htdocs/webcams.*
-/dev/null
+.Root/
 
 # Delete MAILER-DAEMON@stella
 :0
 * ^From:.*MAILER-DAEMON@stella.sr.unh.edu.*
-/dev/null
+.Root/
 
 # Delete nagios
 :0
 * ^From:.*nagios@arpeggi.sr.unh.edu.*
-/dev/null
+.Root/
